# pathway-benchmarks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
docker-compose/: common-services.yml  custom-test-1.env  custom-test-wordcout-pawel.env  doall-kafka-streams-increment.sh  doall-kafka-streams-wordcount.sh  doall-kafka-streams.sh  doall-pw-increment.sh  doall-pw-wordcount.sh  doall-spark-continuous-increment.sh  doall-spark-pagerank-experiment.sh  doall-spark-word-count.sh  doall-spark.sh  doall.sh  docker-compose-flink-word-count-local-minibatch.yml  docker-compose-flink-word-count-local.yml  docker-compose-flink-word-count-minibatch.yml  docker-compose-flink-word-count.yml  docker-compose-kafka-streams-word-count.yml  docker-compose-kafka-streams.yml  docker-compose-pathway-local.yml  docker-compose-pathway.yml  docker-compose-spark-increment.yml  docker-compose-spark-pagerank.yml  docker-compose-spark-word-count-local.yml  docker-compose-spark-word-count-scala-local.yml  docker-compose-spark-word-count-scala.yml  docker-compose-spark-word-count.yml  flink-pagerank-local-streaming.yml  flink-pagerank-local.yml  flink-pagerank.yml  flink.env  flink_cmp.sh  flink_pagerank_all_final.sh  (+14 more)
services/stats-collector/: Cargo-increment.toml  Cargo-kafka_io_record.toml  Cargo-wordcount.toml  Cargo.toml  Dockerfile  Dockerfile-increment  Dockerfile-kafka_io_record  Dockerfile-wordcount  main.py
services/stats-collector/src/: increment_stats_collector.rs  kafka_io_record.rs  kafka_reader.rs  main.rs  utils.rs  weighted_wordcount_stats_collector.rs  wordcount_stats_collector.rs
(+215 files in other folders)
