[package]
name = "simple-streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rdkafka = { version = "0.29.0", features = ["ssl", "sasl"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
itertools = "0.10.5"


[[bin]]
name = "wordcount_stats_collector"
path = "src/wordcount_stats_collector.rs"

[[bin]]
name = "increment_stats_collector"
path = "src/increment_stats_collector.rs"

[[bin]]
name = "kafka_io_record"
path = "src/kafka_io_record.rs"

[[bin]]
name = "weighted_wordcount_stats_collector"
path = "src/weighted_wordcount_stats_collector.rs"
